Replaced Runtime.getRuntime().exec(...) with ProcessBuilder(...).start().